// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TotalHeldArea renders correctly 1`] = `
<section class="total-held-area">
  <div class="total-held-area__united-info-area">
    <div class="total-held-area__united-info-area__item">
      <p class="total-held-area__united-info-area__item__label">Held Amount Rate</p>
      <p class="total-held-area__united-info-area__item__amount">0%</p>
    </div>
    <div class="total-held-area__united-info-area__item align-center">
      <p class="total-held-area__united-info-area__item__label">Total Held Amount</p>
      <p class="total-held-area__united-info-area__item__amount">$0.00</p>
    </div>
    <div class="total-held-area__united-info-area__item align-end">
      <p class="total-held-area__united-info-area__item__label">Total Held Returned</p>
      <p class="total-held-area__united-info-area__item__amount">$0.00</p>
    </div>
  </div>
  <div class="total-held-area__info-area">
    <singleinfo-stub width="100%" label="Held Amount Rate" value="0%"></singleinfo-stub>
    <singleinfo-stub width="100%" label="Total Held Amount" value="$0.00"></singleinfo-stub>
    <singleinfo-stub width="100%" label="Total Held Returned" value="$0.00"></singleinfo-stub>
  </div>
</section>
`;

exports[`TotalHeldArea renders correctly with actual values 1`] = `
<section class="total-held-area">
  <div class="total-held-area__united-info-area">
    <div class="total-held-area__united-info-area__item">
      <p class="total-held-area__united-info-area__item__label">Held Amount Rate</p>
      <p class="total-held-area__united-info-area__item__amount">0%</p>
    </div>
    <div class="total-held-area__united-info-area__item align-center">
      <p class="total-held-area__united-info-area__item__label">Total Held Amount</p>
      <p class="total-held-area__united-info-area__item__amount">$0.50</p>
    </div>
    <div class="total-held-area__united-info-area__item align-end">
      <p class="total-held-area__united-info-area__item__label">Total Held Returned</p>
      <p class="total-held-area__united-info-area__item__amount">$0.10</p>
    </div>
  </div>
  <div class="total-held-area__info-area">
    <singleinfo-stub width="100%" label="Held Amount Rate" value="0%"></singleinfo-stub>
    <singleinfo-stub width="100%" label="Total Held Amount" value="$0.50"></singleinfo-stub>
    <singleinfo-stub width="100%" label="Total Held Returned" value="$0.10"></singleinfo-stub>
  </div>
</section>
`;
